ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/Deal_Number__c.object-meta.xml
<CustomObject>
    <description>The custom object created for Deal Number generation</description>
    <label>Deal Number</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>