ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Account_statement__c.field-meta.xml
<CustomField>
    <fullName>Account_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account statement</label>
    <type>Checkbox</type>
</CustomField>