ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Banker_signature_verification__c.field-meta.xml
<CustomField>
    <fullName>Banker_signature_verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banker signature verification</label>
    <type>Checkbox</type>
</CustomField>