ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Deal_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deal_No_Formula__c</fullName>
    <formula>DNField1__c +  DNField2__c +  DNField3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal No Formula</label>
    <type>Text</type>
</CustomField>