ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <formula>DNField1__c  +  DNField2__c  +  ProductCode__c  +  DNField3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Number</label>
    <type>Text</type>
</CustomField>