ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Deal_Number_Tractor__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number_Tractor__c</fullName>
    <label>Deal Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>