ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/DNField1__c.field-meta.xml
<CustomField>
    <fullName>DNField1__c</fullName>
    <description>DNField1</description>
    <label>DNField1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>