ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/DNField2__c.field-meta.xml
<CustomField>
    <fullName>DNField2__c</fullName>
    <description>DNField2</description>
    <label>DNField2</label>
    <length>1</length>
    <type>Text</type>
</CustomField>