ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/DNField3__c.field-meta.xml
<CustomField>
    <fullName>DNField3__c</fullName>
    <description>DNField3</description>
    <label>DNField3</label>
    <length>5</length>
    <type>Text</type>
</CustomField>