ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/IND_Remark__c.field-meta.xml
<CustomField>
    <fullName>IND_Remark__c</fullName>
    <label>IND_Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>