ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Numbers</relationshipLabel>
    <relationshipName>Deal_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>