ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Number_of_SPDC_collected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SPDC_collected__c</fullName>
    <label>Number of SPDC collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>