ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>CASE(Loan_Application__r.Product_Type__c,
&quot;Two Wheeler&quot;,&apos;H&apos;,&quot;Passenger Vehicles&quot;,&apos;C&apos;,&quot;Tractor&quot;,&apos;T&apos;,&apos;H&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductCode</label>
    <type>Text</type>
</CustomField>