ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Remarks_SPDC__c.field-meta.xml
<CustomField>
    <fullName>Remarks_SPDC__c</fullName>
    <label>Remarks SPDC</label>
    <type>TextArea</type>
</CustomField>