ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Security_ACH__c.field-meta.xml
<CustomField>
    <fullName>Security_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security ACH</label>
    <type>Checkbox</type>
</CustomField>