ProdIND/ProdPrograms/force-app/main/default/objects/Deal_Number__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Request</fullName>
            </value>
            <value>
                <fullName>RC Upload</fullName>
            </value>
            <value>
                <fullName>Business Payment Details</fullName>
            </value>
            <value>
                <fullName>Insurance Details</fullName>
            </value>
            <value>
                <fullName>New/Used Vehicle Details</fullName>
            </value>
            <value>
                <fullName>Beneficiary Details</fullName>
            </value>
            <value>
                <fullName>Key Fact Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>